[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console"
] }
wee_alloc = { version = "0.4.5", optional = true}
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.console_error_panic_hook]
version = "0.1.7"

[profile.release]
opt-level = 2